ch04:初步实现运行时数据区
ch04:计划实现运行时数据区

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>ch01</module>
         <module>ch02</module>
         <module>ch03</module>
+        <module>ch04</module>
     </modules>
 
 
